# straighted

./: .travis.yml  README.md  pyproject.toml
tests/: test_straighted.py
