[tool.poetry]
name = "straighted"
version = "1.0.0"
description = "A (very) simple and extensible network library"
authors = ["NicklasTegner <NicklasMCHD@live.dk>"]
license = "Mozilla Public License 2.0"

[tool.poetry.dependencies]
python = ">= 3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
